Retirada função deprecated da classe de servlet